--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Integrantes: Santiago Rios - Yeison Patino -->
+  <!-- Integrantes: Santiago Rios - Yeison Patino -->
+
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- conexion con el css -->
+      <link rel="stylesheet" href="index.css" />
+      <title>Viajes SAYE</title>
+    </head>
+    <body>
+    </body>
+  </html>
