Crear barra de navegacion

--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
       <title>Viajes SAYE</title>
     </head>
     <body>
+                         <!-- Barra de navegacion -->
+            <nav>
+                 <div class="nav__logo"><a href="#">SAYE</a></div>
+                 <ul class="nav__links">
+                 <li class="link"><a href="#">Home</a></li>
+                 <li class="link"><a href="#">¿Quienes somos?</a></li>
+                 <li class="link"><a href="#">Paquetes de viaje</a></li>
+                 <li class="link"><a href="#">Implementos</a></li>
+                 <li class="link"><a href="#">Afiliados</a></li>
+                 <li class="link"><a href="#" class="nav__btn">Resgistrate</a></li>    
+                 <li class="link"><a href="#" class="btn">Button</a></li>
+                 </ul>
+            </nav>
     </body>
   </html>
