--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
                          <!-- Barra de navegacion -->
             <nav>
-                 <div class="nav__logo"><a href="#">SAYE</a></div>
-                 <ul class="nav__links">
+             <div class="nav__logo"><a href="#">SAYE</a></div>
+             <ul class="nav__links">
                  <li class="link"><a href="#">Home</a></li>
                  <li class="link"><a href="#">¿Quienes somos?</a></li>
                  <li class="link"><a href="#">Paquetes de viaje</a></li>
@@ -24,5 +24,25 @@
                  <li class="link"><a href="#" class="btn">Button</a></li>
                  </ul>
             </nav>
+            <!-- contenedor principal -->
+    <section class="container">
+        <div class="content__container">
+          <h1>
+            SAYE<br />
+            <span class="heading__1">Lo mejor en implementos </span><br />
+            <span class="heading__2">para viajar</span>
+          </h1>
+          <p>
+            En SAYE nos esforzamos para entregarte las mejores opciones a la hora de elegir tus implementos y herramientas para que puedas viajar sin limites, con la seguridad de que llevas los mejor de lo mejor al alcance de tu mano.
+          </p>
+  
+          <!-- barra de busqueda -->
+          <form>
+            <input type="text" placeholder="¿Que quieres adquirir?" />
+            <button type="submit">¡Vamos alla!</button>
+          </form>
+        </div>
+  
+
     </body>
   </html>
