Realizamos la conexion las imagenes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
             <button type="submit">¡Vamos alla!</button>
           </form>
         </div>
-  
+        
+   <!-- cards con imagenes -->
+   <div class="image__container">
+    <img id="img" src="img/descarga.jpg" alt="header" />
+    <img id="img2" src="img/img3.jpg" alt="header" />
+    <div class="image__content">
+      <ul>
+        <li>Obten 30% de descuento en tu primer compra</li>
+        <li>viaja sin preocupaciones</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
     </body>
   </html>
