Agregamos la conexion con la .js

--- a/index.html
+++ b/index.html
@@ -1,60 +1,61 @@
-  <!-- Integrantes: Santiago Rios - Yeison Patino -->
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- conexion con el css -->
-      <link rel="stylesheet" href="index.css" />
-      <title>Viajes SAYE</title>
-    </head>
-    <body>
-                         <!-- Barra de navegacion -->
-            <nav>
-             <div class="nav__logo"><a href="#">SAYE</a></div>
-             <ul class="nav__links">
-                 <li class="link"><a href="#">Home</a></li>
-                 <li class="link"><a href="#">¿Quienes somos?</a></li>
-                 <li class="link"><a href="#">Paquetes de viaje</a></li>
-                 <li class="link"><a href="#">Implementos</a></li>
-                 <li class="link"><a href="#">Afiliados</a></li>
-                 <li class="link"><a href="#" class="nav__btn">Resgistrate</a></li>    
-                 <li class="link"><a href="#" class="btn">Button</a></li>
-                 </ul>
-            </nav>
-            <!-- contenedor principal -->
-    <section class="container">
-        <div class="content__container">
-          <h1>
-            SAYE<br />
-            <span class="heading__1">Lo mejor en implementos </span><br />
-            <span class="heading__2">para viajar</span>
-          </h1>
-          <p>
-            En SAYE nos esforzamos para entregarte las mejores opciones a la hora de elegir tus implementos y herramientas para que puedas viajar sin limites, con la seguridad de que llevas los mejor de lo mejor al alcance de tu mano.
-          </p>
-  
-          <!-- barra de busqueda -->
-          <form>
-            <input type="text" placeholder="¿Que quieres adquirir?" />
-            <button type="submit">¡Vamos alla!</button>
-          </form>
-        </div>
-        
-   <!-- cards con imagenes -->
-   <div class="image__container">
-    <img id="img" src="img/descarga.jpg" alt="header" />
-    <img id="img2" src="img/img3.jpg" alt="header" />
-    <div class="image__content">
-      <ul>
-        <li>Obten 30% de descuento en tu primer compra</li>
-        <li>viaja sin preocupaciones</li>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- conexion con el css -->
+    <link rel="stylesheet" href="index.css" />
+    <title>Viajes SAYE</title>
+  </head>
+  <body>
+    <!-- Barra de navegacion -->
+    <nav>
+      <div class="nav__logo"><a href="#">SAYE</a></div>
+      <ul class="nav__links">
+        <li class="link"><a href="#">Home</a></li>
+        <li class="link"><a href="#">¿Quienes somos?</a></li>
+        <li class="link"><a href="#">Paquetes de viaje</a></li>
+        <li class="link"><a href="#">Implementos</a></li>
+        <li class="link"><a href="#">Afiliados</a></li>
+        <li class="link"><a href="#" class="nav__btn">Resgistrate</a></li>    
+        <li class="link"><a href="#" class="btn">Button</a></li>
       </ul>
-    </div>
-  </div>
-</section>
+    </nav>
+    <!-- contenedor principal -->
+    <section class="container">
+      <div class="content__container">
+        <h1>
+          SAYE<br />
+          <span class="heading__1">Lo mejor en implementos </span><br />
+          <span class="heading__2">para viajar</span>
+        </h1>
+        <p>
+          En SAYE nos esforzamos para entregarte las mejores opciones a la hora de elegir tus implementos y herramientas para que puedas viajar sin limites, con la seguridad de que llevas los mejor de lo mejor al alcance de tu mano.
+        </p>
 
-    </body>
-  </html>
+        <!-- barra de busqueda -->
+        <form>
+          <input type="text" placeholder="¿Que quieres adquirir?" />
+          <button type="submit">¡Vamos alla!</button>
+        </form>
+      </div>
+
+      <!-- cards con imagenes -->
+      <div class="image__container">
+        <img id="img" src="img/descarga.jpg" alt="header" />
+        <img id="img2" src="img/img3.jpg" alt="header" />
+        <div class="image__content">
+          <ul>
+            <li>Obten 30% de descuento en tu primer compra</li>
+            <li>viaja sin preocupaciones</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- conexion con el archivo js -->
+    <script src="index.js"></script>
+  </body>
+</html>
