--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Santiago Rios Grisales -->
+<!-- Yeison Eerney Patino Patino -->
+<!-- https://github.com/Sanri95/Interfaces_de_usuario.git -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,8 +15,8 @@
   <body>
     <!-- Barra de navegacion -->
     <nav>
-      <div class="nav__logo"><a href="#">SAYE</a></div>
-      <ul class="nav__links">
+        <div class="nav__logo"><a href="#">SAYE</a></div>
+        <ul class="nav__links">
         <li class="link"><a href="#">Home</a></li>
         <li class="link"><a href="#">¿Quienes somos?</a></li>
         <li class="link"><a href="#">Paquetes de viaje</a></li>
@@ -20,11 +24,11 @@
         <li class="link"><a href="#">Afiliados</a></li>
         <li class="link"><a href="#" class="nav__btn">Resgistrate</a></li>    
         <li class="link"><a href="#" class="btn">Button</a></li>
-      </ul>
+        </ul>
     </nav>
     <!-- contenedor principal -->
-    <section class="container">
-      <div class="content__container">
+       <section class="container">
+       <div class="content__container">
         <h1>
           SAYE<br />
           <span class="heading__1">Lo mejor en implementos </span><br />
