Se Actualiza trabajo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Santiago Rios Grisales -->
-<!-- Yeison Eerney Patino Patino -->
+<!-- Yeison Erney Patino Patino -->
 <!-- https://github.com/Sanri95/Interfaces_de_usuario.git -->
 
 <!DOCTYPE html>
